<resources>
    <string name="app_name">Flash Notes</string>
    <string name="notes">Notes</string>
    <string name="reminders">Reminders</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="user_name">User Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_a_new_note_reminder">Create a new Note/Reminder</string>
    <string name="create">Create</string>
    <string name="create_a_new_note">Create a new Note.</string>
    <string name="add_a_new_reminder">Add a new Reminder</string>
    <string name="search_notes">Search Notes</string>
    <string name="title">Title</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="client_server_id">970406457495-m8bl2jksge9vbe60417ua8j9jioqoa0k.apps.googleusercontent.com</string>
    <string name="note_content">Note Content</string>

    <string name="set_reminder">Set reminder</string>
    <string name="date">Date</string>
    <string name="time">Select your time</string>
    <string name="user_details">user_details</string>
    <string name="set_reminder_tomorrow_morning">set reminder tomorrow morning</string>
    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="evening">Evening</string>
    <string name="night">Night</string>
    <string name="pick_your_time">Pick a time…</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="today">Today</string>
    <string name="next_week">Next Week</string>
    <string name="pick_your_date">Pick a date…</string>
    <string name="drop_down_arraow">drop down arraow</string>
    <string name="every_day">Every Day</string>
    <string name="every_year">Every Year</string>
    <string name="every_month">Every Month</string>
    <string name="every_week">Every Week</string>
    <string name="never_repeat">Never Repeat</string>
    <string name="formatted_time">%1$s:%2$s %3$s</string>
    <string name="_08_00_am">08:00 AM</string>
    <string name="_01_00_pm">01:00 PM</string>
    <string name="_06_00_pm">06:00 PM</string>
    <string name="_09_00_pm">09:00 PM</string>
    <string name="does_not_repeat">Does not repeat</string>
    <string name="repeats_daily">Repeats Daily</string>
    <string name="repeats_weekly">Repeats Weekly</string>
    <string name="repeats_monthly">Repeats Monthly</string>
    <string name="repeats_yearly">Repeats Yearly</string>
    <string name="sign_up_here">Sign Up Here.</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="country">Country</string>
    <string name="forget_password">Forget Password?</string>
    <string name="remember_me">Remember Me</string>
    <string name="sign_up">Sign Up</string>
    <string name="register_with">Register with...</string>
    <string name="already_have_an_account_login_here">Already have an account? Login here.</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_sign_up_here">Don\'t have an account? Sign up here.</string>
    <string name="please_click_the_plus_button_to_create_your_first_note">Please click the plus button to create your first note.</string>
    <string name="location">Location</string>
    <string name="date_time">Date/Time</string>

    <dimen name="very_very_small_text">9sp</dimen>
    <dimen name="very_very_big_text">25sp</dimen>
    <dimen name="information_img_height">180dp</dimen>
    <dimen name="search_product_img_height">170dp</dimen>
    <dimen name="month_product_img_height">200dp</dimen>
    <dimen name="search_product_img_width">180dp</dimen>
    <dimen name="recommed_product_img_height">200dp</dimen>
    <dimen name="recommed_product_img_width">170dp</dimen>
    <dimen name="tienda_detail_img_height">200dp</dimen>
    <dimen name="tienda_product_img_width">120dp</dimen>
    <dimen name="tienda_product_img_height">120dp</dimen>
    <dimen name="gvd_item_spacing">5dp</dimen>
    <dimen name="product_detail_profile_height">50dp</dimen>
    <dimen name="product_detail_profile_width">50dp</dimen>
    <dimen name="item_noticia_img_height">200dp</dimen>
    <dimen name="margin_top_blogger">10dp</dimen>
    <dimen name="blogger_appbar_height">150dp</dimen>
    <dimen name="related_product_img_height">150dp</dimen>
    <dimen name="related_product_img_width">120dp</dimen>
    <dimen name="very_small_space">3dip</dimen>
    <dimen name="very_small_space2">4dip</dimen>
    <dimen name="small_space">5dip</dimen>
    <dimen name="medium_space">7dip</dimen>
    <dimen name="large_space">10dip</dimen>
    <dimen name="large_space2">15dip</dimen>
    <dimen name="very_large_space">20dip</dimen>
    <dimen name="very_large_space2">23dip</dimen>
    <dimen name="very_very_large_space">30dip</dimen>
    <dimen name="very_very_large_space2">40dip</dimen>
    <dimen name="very_very_very_large_space">50dip</dimen>
    <dimen name="very_very_very_very_large_space">60dip</dimen>
</resources>