<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FragNotes">

    <TextView
        android:id="@+id/txtNoNoteFound"
        android:text="Please click the plus button to create your first note."
        android:textColor="@color/grey_500"
        android:gravity="center"
        android:layout_margin="15dp"
        android:textSize="@dimen/very_very_big_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/notesRcv"
        tools:listitem="@layout/cell_note_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />



    <LinearLayout
        android:orientation="vertical"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="6dp"
            android:layout_marginStart="6dp"
            android:layout_marginVertical="6dp"
            android:id="@+id/btnCreateReminder"
            android:src="@drawable/ic_add_reminder"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/add_a_new_reminder" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="6dp"
            android:src="@drawable/ic_add_note"
            android:layout_marginVertical="6dp"
            style="?attr/floatingActionButtonSmallStyle"
            android:id="@+id/btnCreateNotes"
            android:visibility="gone"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/create_a_new_note" />


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnCreateAction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="6dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="6dp"
                android:clickable="true"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/create_a_new_note_reminder"
                android:focusable="true"
                android:src="@drawable/ic_plus_1"
                app:shapeAppearance="@style/fab_square_shape"
                />




    </LinearLayout>









</FrameLayout>